<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!--<TextView
        android:id="@+id/header_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ums"
        android:textColor="#FFD03731"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/header_txt"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/ums"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFD03731"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/tariflar_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/internet_linear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/daqiqalar_linear"
        app:layout_constraintTop_toBottomOf="@id/header_txt"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/bir"
            app:tint="#FFD03731"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tariflar"
            android:textColor="#FF313131" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/daqiqalar_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/setting_linear"
        app:layout_constraintLeft_toRightOf="@id/tariflar_linear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_txt">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/uch"
            app:tint="#FFD03731"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/daqiqalar"
            android:textAllCaps="true"
            android:textColor="#FF313131" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/internet_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/sms_linear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/setting_linear"
        app:layout_constraintTop_toBottomOf="@id/tariflar_linear"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ikki"
            android:textAllCaps="true"
            app:tint="#FFD03731"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/internet"
            android:textAllCaps="true"
            android:textColor="#FF313131" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/news_linear"
        app:layout_constraintLeft_toRightOf="@id/internet_linear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daqiqalar_linear">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/turt"
            app:tint="#FFD03731"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/xizmatlar"
            android:textAllCaps="true"
            android:textColor="#FF313131" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sms_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/news_linear"
        app:layout_constraintTop_toBottomOf="@id/internet_linear"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/besh"
            app:tint="#FFD03731"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sms"
            android:textColor="#FF313131" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/news_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/sms_linear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_linear"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/olti"
            app:tint="#FFD03731"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yangiliklar"
            android:textAllCaps="true"
            android:textColor="#FF313131" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>